--- a/Feedings.ipynb
+++ b/Feedings.ipynb
@@ -9,7 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Author: Alisha Acosta\n",
+    "#Updated: 6-30-25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define the input path and output path\n",
+    "#Define the input path \n",
     "path = \"./Data.xlsx\"\n",
     "\n",
     "#isolate the cumulative food intake by row/column\n",
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +134,7 @@
     "    result['Time'] = time\n",
     "    post_hoc_results.append(result)\n",
     "\n",
-    "#combine into data frame for easier viewing \n",
+    "#combine into data frame\n",
     "post_hoc_df = pd.concat(post_hoc_results, ignore_index= True)\n",
     "\n",
     "#print(post_hoc_df.head()) #uncomment to view\n",
@@ -134,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +347,7 @@
        "11  0.007166  0.021497     bonf   8.292 -1.825944   4.0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -384,12 +394,16 @@
     }
    ],
    "source": [
+    "#define line colors\n",
+    "line_colors = {'Vehicle' : 'black',\n",
+    "          'Drug_1' : 'blue',\n",
+    "          'Drug_2' : 'green'}\n",
     "\n",
     "#determine x values\n",
     "x_values = all_data['Time'].unique()\n",
     "x_values\n",
     "    \n",
-    "#Create line plot\n",
+    "#create line plot\n",
     "sns.lineplot(data=all_data, x='Time', y='Grams', hue='Condition',\n",
     "             style='Condition', palette=line_colors,\n",
     "             errorbar='se', err_style='bars', markers=True, dashes=False)\n",
@@ -399,7 +413,7 @@
     "plt.ylabel('Grams Consumed')\n",
     "plt.title('Food Intake')\n",
     "\n",
-    "# Loop through significant results and annotate\n",
+    "#loop through significant results and annotate\n",
     "for _, row in sig_values.iterrows():\n",
     "    time = row['Time']\n",
     "    cond1 = row['A']\n",
@@ -407,11 +421,12 @@
     "    pval = row['p-corr']\n",
     "    asterisk = convert_pvalue_to_asterisks(pval)\n",
     "\n",
-    "    # Find max y at this timepoint for these two conditions\n",
+    "    #determine asterick positions based on vehicle data\n",
     "    vehicle_subset = all_data[(all_data['Time'] == time) & (all_data['Condition'] == 'Vehicle')]\n",
     "    mean_vehicle = vehicle_subset['Grams'].mean()\n",
     "    se_vehicle = vehicle_subset['Grams'].sem()\n",
     "    y_position = mean_vehicle + se_vehicle + 0.02  # buffer above error bar\n",
+    "\n",
     "    #determine the color asterick\n",
     "    if cond1 == 'Drug_1':\n",
     "        as_color = 'blue'\n",
@@ -419,11 +434,8 @@
     "    elif cond1 == 'Drug_2':\n",
     "        as_color = 'green'\n",
     "        y_position = y_position + 0.05\n",
-    "    # Slightly offset the line and text\n",
-    "    y_offset = 0.05\n",
     "\n",
-    "    # Add astericks\n",
-    "    #plt.plot([time, time], [max_y + y_offset, max_y + y_offset + 0.02], color='k')\n",
+    "    #add astericks\n",
     "    plt.text(time, y_position, asterisk, ha='center', va='bottom', fontsize=12, color = as_color)\n",
     "plt.savefig('./Results/graph.pdf')\n",
     "plt.show()\n"
